--- a/ios/index.html
+++ b/ios/index.html
@@ -5,7 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		<a href="itms-services://?action=download-manifest&url=https://raw.iqiq.io/HuYeFe/test/main/ios/15.7.0.plist">15.7.0下载</a>
-		<a href="itms-services://?action=download-manifest&url=https://raw.iqiq.io/HuYeFe/test/main/ios/22.3.6.plist">22.3.6下载</a>
+		<a href="itms-services://?action=download-manifest&url=https://huyefe.github.io/test/ios/15.7.0.plist">15.7.0下载</a>
+		<a href="itms-services://?action=download-manifest&url=https://huyefe.github.io/test/ios/22.3.6.plist">22.3.6下载</a>
 	</body>
 </html>
