--- a/ios/index.html
+++ b/ios/index.html
@@ -5,7 +5,10 @@
 		<title></title>
 	</head>
 	<body>
+		<a href="itms-services://?action=download-manifest&url=https://huyefe.github.io/test/ios/14.1.0.plist">14.1.0下载</a>
 		<a href="itms-services://?action=download-manifest&url=https://huyefe.github.io/test/ios/15.7.0.plist">15.7.0下载</a>
 		<a href="itms-services://?action=download-manifest&url=https://huyefe.github.io/test/ios/22.3.6.plist">22.3.6下载</a>
+		<a href="itms-services://?action=download-manifest&url=https://huyefe.github.io/test/ios/26.7.0.plist">26.7.0下载</a>
+		<a href="itms-services://?action=download-manifest&url=https://huyefe.github.io/test/ios/27.1.1.plist">27.1.1下载</a>
 	</body>
 </html>
